--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,18 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
+<br>
+<br>
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+<br>
+<br>
+<%= render partial: 'comments/form' %>
+<br>
+<br>
 <%= link_to "<< Back to Articles List", articles_path %>
 <br>
+<br>
 <%= link_to "Edit", edit_article_path(@article) %>
+<br>
 <br>
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
